# rnbo.example.command-line

./: .gitignore  README.md
parameter-get-set/: CMakeLists.txt  README.md  main.cpp
parameter-get-set/export/: README.md  description.json  param-tester.cpp
parameter-get-set/patches/: param-tester.maxpat
sound-file-mixer/: CMakelists.txt  README.md  main.cpp
sound-file-mixer/export/: dependencies.json  description.json  sound-file-mixer.cpp
sound-file-mixer/export/rnbo/: version.cmake
sound-file-mixer/export/rnbo/common/: RNBO_Version.h
sound-file-mixer/patches/: sound-file-mixer.maxpat
